<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainView"
    android:orientation="vertical"
    android:background="#010101">

    <ImageView
        android:id="@+id/imgTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/lblPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:textColor="#3399CC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <ImageButton
            android:id="@+id/btnHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/btnHelp"
            android:background="@drawable/btn_help" />

        <ImageButton
            android:id="@+id/btnGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/btnGo"
            android:background="@drawable/btn_go" />

        <ImageButton
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/btnClear"
            android:background="@drawable/btn_clear" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/testInsult"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#99CC00" />

</LinearLayout>
